dataset1235/2025-2/1379599236/users/2250800429/executions/2277843042_775838323.log
== SUBMISSION (2025-08-20 18:07:07)
-- CODE: 
i = input()
print(i)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:07:30)
-- CODE: 
i = input(2*())
print(i)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
()1
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
()1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:07:28)
-- CODE: 
i = input(2*())
print(i)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
()1
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
()1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:10:20)
-- CODE: 
a = 1
c = float(a*4)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:07:39)
-- CODE: 
i = input(2*)
print(i)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    i = input(2*)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    i = input(2*)
                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:09:44)
-- CODE: 
a = 1
c = float(input())
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:10:11)
-- CODE: 
a = 1
c = float(a*4)
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
